fix popup on small screens

--- a/travel-agency-website/src/app/components/login-register/login-register.component.css
+++ b/travel-agency-website/src/app/components/login-register/login-register.component.css
@@ -125,9 +125,9 @@
     top: 0;
     left: 0;
     z-index: 100;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.543);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.61);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -143,13 +143,14 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    top: -100px;
 }
 
 #close-popup-btn {
     border: none;
     background-color: transparent;
     position: absolute;
-    top: 5px;
+    top: 8px;
     left: 88%;
     transition: transform 0.4s;
 }
@@ -163,6 +164,7 @@
     width: 280px;
     height: 50px;
     border-radius: 8px;
+    border: 2px solid black;
     margin: 10px;
     display: flex;
     align-items: center;
